[gd_scene load_steps=11 format=3 uid="uid://dsihky3kwtryv"]

[ext_resource type="Script" uid="uid://dyd11vutwk4ix" path="res://Microjuegos/Emily/4_Gato guatón/Script/main.gd" id="1_lquwl"]
[ext_resource type="Texture2D" uid="uid://b4ogxfc1uvsmt" path="res://Microjuegos/Emily/4_Gato guatón/Sprites/fondito.png" id="2_7mycd"]
[ext_resource type="Texture2D" uid="uid://k8rcpxjdbn82" path="res://Microjuegos/Emily/4_Gato guatón/Sprites/Gatito.png" id="3_272bh"]
[ext_resource type="Texture2D" uid="uid://dn18lasysxkfh" path="res://Microjuegos/Emily/4_Gato guatón/Sprites/good.png" id="4_5vw27"]
[ext_resource type="Texture2D" uid="uid://c5ka8iwddoks5" path="res://Microjuegos/Emily/4_Gato guatón/Sprites/bad.png" id="5_kek77"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4c57u"]
radius = 61.0
height = 122.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_efxa6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dg77c"]
size = Vector2(22.6667, 32.3333)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h4nog"]
bg_color = Color(0.165656, 0.165656, 0.165657, 0.486275)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aqyky"]
bg_color = Color(0, 0, 0, 0.411765)

[node name="Main" type="Node2D"]
script = ExtResource("1_lquwl")

[node name="Pared" type="Sprite2D" parent="."]
position = Vector2(961.5, 591)
scale = Vector2(0.943848, 0.575195)
texture = ExtResource("2_7mycd")

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(959, 910)

[node name="Sprite2D" type="Sprite2D" parent="Player"]
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_272bh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(-4, -82)
shape = SubResource("CapsuleShape2D_4c57u")

[node name="GoodFood" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="GoodFood"]
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_5vw27")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoodFood"]
scale = Vector2(7.1, 7.1)
shape = SubResource("RectangleShape2D_efxa6")

[node name="BadFood" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="BadFood"]
scale = Vector2(0.17, 0.17)
texture = ExtResource("5_kek77")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BadFood"]
position = Vector2(-8, 0)
scale = Vector2(6, 6)
shape = SubResource("RectangleShape2D_dg77c")

[node name="TextoControles" type="Label" parent="."]
offset_left = -8.0
offset_top = 791.0
offset_right = 619.0
offset_bottom = 1096.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 75
theme_override_styles/normal = SubResource("StyleBoxFlat_h4nog")
text = "Moverse: WASD
Atrapar: Espacio"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Instruccion" type="Label" parent="."]
offset_left = 360.0
offset_top = 311.0
offset_right = 1638.0
offset_bottom = 616.0
theme_override_font_sizes/font_size = 120
theme_override_styles/normal = SubResource("StyleBoxFlat_aqyky")
text = "Atrapalo! (Espacio)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TiempoRestante" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="barraDeTiempo" type="ProgressBar" parent="."]
offset_left = 328.0
offset_top = 36.0
offset_right = 1645.0
offset_bottom = 89.0
show_percentage = false

[connection signal="timeout" from="TiempoRestante" to="." method="_on_timer_timeout"]
